# libretracker

./: .gitmodules  CMakeLists.txt  README.md
include/: aligned_allocator.h  aruco_canvas.h  cv_camera_control.h  dependencies.h  eigen_helpers.h  eigen_pseudoinverse.h  eigenlab.h  eyetracking_speller.h  fast_sqrt.h  filters.h  helpers.h  opencv_threaded_capture.h  pupil_tracker.h  pupil_tracker_impl.h  pupil_tracking.h  sdl_opencv.h  simple_gui_fltk.h  timer_hd.h  timing.h  timm.h  timm_gpu.h  timm_multithreaded.h  timm_opencl.h  timm_two_stage.h  timm_vectorized.h
src/: aligned_allocator.cpp  aruco_include.cpp  avx2_kernel.cpp  avx512_kernel.cpp  avx_kernel.cpp  cv_camera_control.cpp  eyetracking_speller.cpp  main.cpp  opencl_kernel.cl  opencl_kernel.cpp  opencl_kernel.cu  pupil_tracker.cpp  pupil_tracker_impl.cpp  simple_gui_fltk.cpp  sse41_kernel.cpp  test_calibration_solve.m  timm.cpp  timm_gpu.cpp  timm_multithreaded.cpp  timm_vectorized.cpp
src/mezzanine/: main.cpp
